Add cache-busting for CSS, JS, and image

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
         crossorigin="anonymous"
         referrerpolicy="no-referrer"
     />
-    <link rel="stylesheet" href="style.css">
-    <script src="script.js" defer></script>
+    <link rel="stylesheet" href="style.css?v=20260226-1">
+    <script src="script.js?v=20260226-1" defer></script>
     <title>Takura's Portifolio</title>
 </head>
 <body>
@@ -33,7 +33,7 @@
     </header>
     <section class="home" id="home">
         <div class="home-img">
-            <img src="main.PNG" alt="">
+            <img src="main.png?v=20260226-1" alt="">
         </div>
         <div class="home-content">
             <h1>Hello! I'm <span>Takura</span></h1>
