--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     </header>
     <section class="home" id="home">
         <div class="home-img">
-            <img src="main.png?v=20260226-1" alt="">
+            <img src="main.png" alt="Takura profile photo" onerror="this.onerror=null;this.src='main.png?v=20260226-1';">
         </div>
         <div class="home-content">
             <h1>Hello! I'm <span>Takura</span></h1>
