Did something with the icons.

--- a/index.html
+++ b/index.html
@@ -94,8 +94,16 @@
         <div class="contact-content">
             <h2>Contact</h2>
             <p>
-                You can reach me via LinkedIn, GitHub, WhatsApp, or email using the social links in the Home section.
+                You can connect with me directly through any of the platforms below.
             </p>
+            <div class="social-icons">
+                <a href="https://www.linkedin.com/in/takura-junia-mudzimbasekwa-0b20ab275" target="_blank"><i class="fab fa-linkedin-in"></i></a>
+                <a href="https://github.com/takurajunia" target="_blank"><i class="fab fa-github"></i></a>
+                <a href="https://instagram.com/takurajunia" target="_blank"><i class="fab fa-instagram"></i></a>
+                <a href="https://facebook.com/takura.mudzimbasekwa" target="_blank"><i class="fab fa-facebook-f"></i></a>
+                <a href="https://wa.me/263787532932" target="_blank"><i class="fab fa-whatsapp"></i></a>
+                <a href="mailto:takurajunia@gmail.com"><i class="fas fa-envelope"></i></a>
+            </div>
         </div>
     </section>
 </body>
